docs/scripts/Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cat
  labels:
    kubernetes.io/metadata.name: cat
