docs/scripts/Deployment.yaml
apiVersion: apps/v1 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: cat-home
  namespace: cat
  labels:
    app: cat-home
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: cat-home
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: cat-home
    spec:
      containers:
        - name: cat-home
          image: registry-vpc.cn-shanghai.aliyuncs.com/my_registry/cat:4.0.0
          ports:
            - containerPort: 8080
            - containerPort: 2280
          volumeMounts:
            - mountPath: /etc/localtime
              name: timezone
      volumes:
        - hostPath:
            path: /etc/localtime
            type: ''
          name: timezone
