docs/scripts/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cat-home-service
  namespace: cat
  labels:
    app: cat-home-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: tcp-8080-8080
    - port: 2280
      targetPort: 2280
      protocol: TCP
      name: tcp-2280-2280
  selector:
    app: cat-home
  type: ClusterIP
